--- a/_posts/2020-06-14-lesson1.md
+++ b/_posts/2020-06-14-lesson1.md
@@ -1,6 +1,6 @@
 ---
 layout: "wrapper"
-title:  "Modern robotics: 1"
+title:  "Modern robotics: Lesson 1"
 ---
 
 ## General definitions
@@ -154,7 +154,7 @@ Let's take out this definition for further reference.
 | R<sup>-1</sup> = R<sup>T</sup> |
 
 ### SO(3)
-We shall then introduce **SO(3)**. The group of orthonormal matrices with determinant 1 is called the **Special Orthonormal Group** of ℝ<sup>3</sup> or **SO(3)**, and can be defined in the following manner:
+The group of 3 dimension orthonormal matrices with determinant +1 is called the **Special Orthonormal Group** of ℝ<sup>3</sup> or **SO(3)**, and can be defined in the following manner:
 
 | SO(3) := { R 𝜖 ℝ<sup>3x3</sup>; R<sup>-1</sup> = R<sup>T</sup>, det(R) = 1} |
 
@@ -166,22 +166,24 @@ It is a group because it satisfies the 3 properties:
 - [x] Inverse. Because by definition all of the elements have an inverse.
 
 It is a Lie group because: 
-Given (R, dR) 𝜖 TSO(3), dR 𝜖 T<sub>R</sub>SO(3), T a tangent plane to SO(3), it satisfies the conditions:
+Given (R, dR) 𝜖 TSO(3), dR 𝜖 T<sub>R</sub>SO(3), R a rotation matrix, dR the derivative of R, T a tangent plane to SO(3), it satisfies the conditions:
 - [x] *(L<sub>R<sup>-1</sup></sub>)<sub>\*</sub>(R, dR) = (R<sup>-1</sup>R, R<sup>-1</sup>dR) = (I, w̃<sub>L</sub>)  
 w̃<sub>L</sub> 𝜖 T<sub>I</sub>SO(3) =: so(3)*
 - [x] *(R<sub>R<sup>-1</sup></sub>)<sub>\*</sub>(R, dR) = (R<sup>-1</sup>R, R<sup>-1</sup>dR) = (I, w̃<sub>R</sub>)  
 w̃<sub>R</sub> 𝜖 T<sub>I</sub>SO(3) =: so(3)*
-- [x] **Lie bracket operation [,]**: *[w̃<sub>x</sub>, w̃<sub>y</sub>] := w̃<sub>x</sub>w̃<sub>y</sub> - w̃<sub>y</sub>w̃<sub>x</sub> 𝜖 so(3)*
+- [x] **Lie bracket operation or commutator [ . , . ]**: *[w̃<sub>x</sub>, w̃<sub>y</sub>] := w̃<sub>x</sub>w̃<sub>y</sub> - w̃<sub>y</sub>w̃<sub>x</sub> 𝜖 so(3)*
+
+Note that these properties of SO(3) tell us important information of this Lie Group, given (R, dR) if we operate on the left or in the right we obtain *w̃<sub>L</sub>* or *w̃<sub>R</sub>*, which are elements of so(3), at the identity element of SO(3). In other words, given any element R of SO(3) and its derivative, we can obtain *w̃* at the identity by multiplying by the inverse of R. This will prove to be very usefull.
 
 ### so(3)
-We can also define the algebra of this group as **so(3)**, which it is a vector space tangent to the identity element of SO(3). We have the following theorem:
+Then we can define the algebra of this group as **so(3)**, which it is a vector space of the *w̃*  skew symmetric elements tangent to the identity element of SO(3). We have the following theorem:
 If R(t) 𝜖 SO(3) is a differentiable function of time, dRR<sup>T</sup> and R<sup>T</sup>dR are Skew-Symmetric and belonging to so(3):
 
 | *so(3) := { w̃ 𝜖 ℝ<sup>3x3</sup>; -w̃ = w̃<sup>T</sup> }*
 
-so(3) is a Lie Algebra:
+so(3) is a Lie Algebra because:
 - [x] so(3) is a vector space on its own.
-- [x] It has the Lie bracket operation:
+- [x] It has the Lie bracket operation (satisfying the axioms of bilinearity, aternativity, Jacobi identity and anticommutativity [link](https://en.wikipedia.org/wiki/Lie_algebra#Definitions)), from which 2 elements of so(3) are taken and the result is another element of so(3):
 
 | [Ω<sub>1</sub>, Ω<sub>2</sub>] := Ω<sub>1</sub>Ω<sub>2</sub> - Ω<sub>2</sub>Ω<sub>1</sub> 𝜖 so(3) |
 
@@ -258,8 +260,13 @@ s.t R 𝜖 SO(3) , o 𝜖 ℝ<sup>3</sup> }
 </td>
 </table>
 
+Because it satisfies:
+- [x] Associativity.
+- [x] Identity.
+- [x] Inverse.
+
 ### se(3)
-And also the algebra.
+And this group has also an algebra. Similar to what it was defined for SO(3), if we have that H(t) 𝜖 SE(3) is a differentiable function of time then dHH<sup>-1</sup> and H<sup>-1</sup>dH belong to se(3) where:
 
 <table class="inline">
 <td>
@@ -282,7 +289,7 @@ s.t <i>w̃</i> 𝜖 so(3) , v 𝜖 ℝ<sup>3</sup> }
 </td>
 </table>
 
-Now define the tilde operator as:
+Now define a new tilde operator, is like in programming to overload a function, here we overload the tilde operator. When the tilde operator is used on a 6 elements vector then we get a 4 by 4 matrix:
 
 <table class="inline">
 <td>
@@ -313,4 +320,9 @@ T :=
           </tr>
      </table>
 </td>
+<td>
+ 𝜖 se(3)
+</td>
 </table>
+
+T represent the **Twists**, which are the representation of the rigid body velocities. It is important to say that w represent the commonly known rotational velocity, but v is not the linear velocity which it is commonly known.
