--- a/_posts/2020-06-14-lesson1.md
+++ b/_posts/2020-06-14-lesson1.md
@@ -265,8 +265,19 @@ Because it satisfies:
 - [x] Identity.
 - [x] Inverse.
 
+And it is also a Lie group, we can also define: 
+Given (H, dH) 𝜖 TSE(3), dH 𝜖 T<sub>R</sub>SE(3), H an homogeneous matrix, dH the derivative of H, T a tangent plane to SE(3), it satisfies the conditions:
+
+- [x] *(L<sub>H<sup>-1</sup></sub>)<sub>\*</sub>(H, dH) = (H<sup>-1</sup>H, H<sup>-1</sup>dH) = (I,<i>T ̃ </i><sub>L</sub>)  
+ <i>T ̃ </i><sub>L</sub> 𝜖 T<sub>I</sub>SE(3) =: se(3)*
+- [x] *(R<sub>H<sup>-1</sup></sub>)<sub>\*</sub>(H, dH) = (H<sup>-1</sup>H, H<sup>-1</sup>dH) = (I, <i>T ̃ </i><sub>R</sub>)  
+ <i>T ̃ </i><sub>R</sub> 𝜖 T<sub>I</sub>SE(3) =: se(3)*
+- [x] **[ . , . ]**: *[T ̃<sub>x</sub>,T ̃<sub>y</sub>] := T ̃<sub>x</sub>T ̃<sub>y</sub> - T ̃<sub>y</sub>T ̃<sub>x</sub> 𝜖 se(3)*
+
+The same way it happened in SO(3) given any element H of SE(3) and its derivative dH, we can obtain now what is called the Twist <i>T ̃ </i> at the identity by multiplying by the inverse of H.
+
 ### se(3)
-And this group has also an algebra. Similar to what it was defined for SO(3), if we have that H(t) 𝜖 SE(3) is a differentiable function of time then dHH<sup>-1</sup> and H<sup>-1</sup>dH belong to se(3) where:
+Similar to what it was defined for SO(3), if we have that H(t) 𝜖 SE(3) is a differentiable function of time then dHH<sup>-1</sup> and H<sup>-1</sup>dH belong to se(3) where:
 
 <table class="inline">
 <td>
@@ -289,7 +300,7 @@ s.t <i>w̃</i> 𝜖 so(3) , v 𝜖 ℝ<sup>3</sup> }
 </td>
 </table>
 
-Now define a new tilde operator, is like in programming to overload a function, here we overload the tilde operator. When the tilde operator is used on a 6 elements vector then we get a 4 by 4 matrix:
+Note that <i>w̃</i> is an element of so(3) and v an element of ℝ<sup>3</sup>. Now define a new tilde operator, is like in programming to overload a function, here we overload the tilde operator. When the tilde operator is used on a 6 elements vector then we get a 4 by 4 matrix:
 
 <table class="inline">
 <td>
@@ -306,7 +317,7 @@ T :=
      </table>
 </td>
 <td>
- ⟹ <i> ̃T</i> = 
+ ⟹ <i>T ̃ </i> = 
 </td>
 <td>
      <table class="matrix">
@@ -325,4 +336,50 @@ T :=
 </td>
 </table>
 
+It is important to remark that now we work with 4 by 4 matrices because the commutator can be computed in terms of the commutator of so(3) and a linear operation as:
+
+<table class="inline">
+<td>
+     <table class="matrix">
+          <tr>
+               <td><i>T ̃ </i><sub>x</sub> , <i>T ̃ </i><sub>y</sub></td>
+          </tr>
+     </table>
+</td>
+<td>
+ = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>[<i>w̃</i><sub>x</sub>, <i>w̃</i><sub>y</sub>]</td>
+               <td><i>w̃</i><sub>x</sub> v<sub>y</sub> - <i>w̃</i><sub>y</sub> v<sub>x</sub></td>
+          </tr>
+          <tr>
+               <td>0</td>
+               <td>0</td>
+          </tr>
+     </table>
+</td>
+</table>
+
 T represent the **Twists**, which are the representation of the rigid body velocities. It is important to say that w represent the commonly known rotational velocity, but v is not the linear velocity which it is commonly known.
+
+### Quick introduction to rigid motions
+We have seen how we can change from one coordinate frame to another coordinate frame, how we can rotate and translate a coordinate frame, but how can we use this to describe the motion of rigid bodies?
+
+We can define a rigid motion as a map from the Euclidean Space into the Euclidean Space, from a point p into a point q.
+
+| h: 𝜀 → 𝜀; p → q
+
+Where we can define the transformation from the point p to the point q with an homogeneous matrix H, from a coordinate frame 𝜓<sub>i</sub> ubicated at one of the points and a frame 𝜓<sub>j</sub> ubicated at the other point. Then the transformation can be defined as:
+
+| q <sup>i</sup> = H <sub>j</sub><sup>i</sup> p <sup>i</sup>, where we perform the compound map: *𝜓<sub>i</sub> o h o 𝜓<sub>i</sub><sup>-1</sup>*
+
+Where h is the motion. We can do the same using the other coordinate frame 𝜓<sub>j</sub>:
+
+| q <sup>j</sup> = H <sub>j</sub><sup>i</sup> p <sup>j</sup>, where now the compound map is: *𝜓<sub>j</sub> o h o 𝜓<sub>j</sub><sup>-1</sup>*
+
+Note that:
+
+| H <sub>j</sub><sup>i</sup> = (H <sub>i</sub><sup>j</sup>) <sup>-1</sup>
