--- a/_posts/2020-06-14-lesson1.md
+++ b/_posts/2020-06-14-lesson1.md
@@ -376,8 +376,15 @@ Where we can define the transformation from the point p to the point q with an h
 
 | q <sup>i</sup> = H <sub>j</sub><sup>i</sup> p <sup>i</sup>, where we perform the compound map: *𝜓<sub>i</sub> o h o 𝜓<sub>i</sub><sup>-1</sup>*
 
-Where h is the motion. We can do the same using the other coordinate frame 𝜓<sub>j</sub>:
+Where h is the motion. Now, this is different of how we defined the homogeneous matrix for a change of coordinates. Let's remind the <u>notation</u> of a change of coordinates from 𝜓<sub>i</sub> to 𝜓<sub>j</sub>: p <sup>j</sup> = H <sub>i</sub><sup>j</sup> p <sup>i</sup>. And also the change of coordinates from 𝜓<sub>j</sub> to 𝜓<sub>i</sub>: p <sup>i</sup> = H <sub>j</sub><sup>i</sup> p <sup>j</sup>.
 
+Note that **the motion of a rigid body is defined as the inverse change of coordinates** from the frame fixed to p 𝜓<sub>i</sub> to the frame fixed to q 𝜓<sub>j</sub>.
+
+We can do the same if the points are defined in the other coordinate frame 𝜓<sub>j</sub>, by applying the coordinate changes that we already know:
+
+| q <sup>i</sup> = H <sub>j</sub><sup>i</sup> p <sup>i</sup> 
+| H <sub>i</sub><sup>j</sup> q <sup>i</sup> = H <sub>i</sub><sup>j</sup> H <sub>j</sub><sup>i</sup> p <sup>i</sup> ;  <--- p <sup>j</sup> = H <sub>i</sub><sup>j</sup> p <sup>i</sup>, H <sub>i</sub><sup>j</sup> H <sub>j</sub><sup>i</sup> = I
+| q <sup>j</sup> = p <sup>i</sup> ; <--- p <sup>i</sup> = H <sub>j</sub><sup>i</sup> p <sup>j</sup>
 | q <sup>j</sup> = H <sub>j</sub><sup>i</sup> p <sup>j</sup>, where now the compound map is: *𝜓<sub>j</sub> o h o 𝜓<sub>j</sub><sup>-1</sup>*
 
 Note that:
