--- a/_posts/2020-06-14-lesson1.md
+++ b/_posts/2020-06-14-lesson1.md
@@ -1,6 +1,7 @@
 ---
 layout: "wrapper"
 title:  "Modern robotics: Lesson 1"
+categories: Modern_Robotics
 ---
 
 ## General definitions
@@ -92,6 +93,10 @@ x =
 </td>
 </table>
 
+The vector product ,which is a map of 2 elements of a vector space to the same vector space ^: 𝜀<sub>\*</sub>(3) x 𝜀<sub>\*</sub>(3) → 𝜀<sub>\*</sub>(3). It can be defined in terms of the tilde operator:
+
+| x ^ y = ̃x y
+
 ## Rotations
 Rotations are a very important concept in robotics. Imagine that you have a point *p* represented in a coordinate frame 𝜓<sub>1</sub>, and you want to represent the point on another coordinate frame 𝜓<sub>2</sub>, which has the same origin as the previous one but it is rotated a certain angle 𝜃.
 
@@ -169,7 +174,7 @@ It is a Lie group because:
 Given (R, dR) 𝜖 TSO(3), dR 𝜖 T<sub>R</sub>SO(3), R a rotation matrix, dR the derivative of R, T a tangent plane to SO(3), it satisfies the conditions:
 - [x] *(L<sub>R<sup>-1</sup></sub>)<sub>\*</sub>(R, dR) = (R<sup>-1</sup>R, R<sup>-1</sup>dR) = (I, w̃<sub>L</sub>)  
 w̃<sub>L</sub> 𝜖 T<sub>I</sub>SO(3) =: so(3)*
-- [x] *(R<sub>R<sup>-1</sup></sub>)<sub>\*</sub>(R, dR) = (R<sup>-1</sup>R, R<sup>-1</sup>dR) = (I, w̃<sub>R</sub>)  
+- [x] *(R<sub>R<sup>-1</sup></sub>)<sub>\*</sub>(R, dR) = (RR<sup>-1</sup>, dRR<sup>-1</sup>) = (I, w̃<sub>R</sub>)  
 w̃<sub>R</sub> 𝜖 T<sub>I</sub>SO(3) =: so(3)*
 - [x] **Lie bracket operation or commutator [ . , . ]**: *[w̃<sub>x</sub>, w̃<sub>y</sub>] := w̃<sub>x</sub>w̃<sub>y</sub> - w̃<sub>y</sub>w̃<sub>x</sub> 𝜖 so(3)*
 
