--- a/_posts/2020-06-14-lesson1.md
+++ b/_posts/2020-06-14-lesson1.md
@@ -4,6 +4,8 @@ title:  "Modern robotics: Lesson 1"
 categories: Modern_Robotics
 ---
 
+*Disclaimer: These are my notes for the course Modern Robotics of the University of Twente. I take as a reference the resources and comments given during the lectures of the professor Stefano Stramigioli and dr. Federico Califano, but these notes haven't been revised so they may contain errors. If you find any error or have any doubt, please do not doubt to contact me to discuss about it, this way we can both learn from it.*
+
 ## General definitions
 We need the mathematical background of *tensors*, *linear maps*, *vector spaces*, *coordinate frames*, *manifolds*, *groups* and *sets*, for so refer to the theoretical explanation [link](link!).
 
