--- a/_posts/2020-06-19-lesson2.md
+++ b/_posts/2020-06-19-lesson2.md
@@ -4,6 +4,8 @@ title:  "Modern robotics: Lesson 2"
 categories: Modern_Robotics
 ---
 
+*Disclaimer: These are my notes for the course Modern Robotics of the University of Twente. I take as a reference the resources and comments given during the lectures of the professor Stefano Stramigioli and dr. Federico Califano, but these notes haven't been revised so they may contain errors. If you find any error or have any doubt, please do not doubt to contact me to discuss about it, this way we can both learn from it.*
+
 In [lesson 1](/angel_blog/modern_robotics/2020/06/14/lesson1.html) we showed how to represent a point in a coordinate frame, how to perform a coordinate change, the SO(3) and the SE(3) Lie Groups and their Lie algebras so(3) and se(3), and how to use these elements to describe the motion of a rigid body. Now we are going to go deeper in these concepts and see how we can define the velocity of a phisical point and how we can use Twists and Wrenches.
 
 ## Angular velocities
@@ -37,4 +39,4 @@ Following this notation, we can again define the angular velocity *w̃*, now for
 | <i style="color:red">w̃</i> :=  R<sub style="color:blue">j</sub> <sup style="color:red">i</sup>dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> = R<sub style="color:red">i</sub> <sup style="color:blue">j</sup> <i style="color:red">w̃</i> | dp <sup style="color:blue">j</sup> = R<sub style="color:red">i</sub> <sup style="color:blue">j</sup>(<i style="color:red">w</i> ^ p <sup style="color:red">i</sup>) | <i style="color:red">w̃</i> <sub style="color:red">i</sub> <sup style="color:red">i</sup><sup>,</sup> <sup style="color:blue">j</sup> |
 | <i style="color:blue">w̃</i> := dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> R<sub style="color:blue">j</sub> <sup style="color:red">i</sup> | dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> = <i style="color:blue">w̃</i> R<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | dp <sup style="color:blue">j</sup> = <i style="color:blue">w</i> ^ (R<sub style="color:red">i</sub> <sup style="color:blue">j</sup> p <sup style="color:red">i</sup>) | <i style="color:blue">w̃</i> <sub style="color:red">i</sub> <sup style="color:blue">j</sup><sup>,</sup> <sup style="color:blue">j</sup> |
 
-The following step is to perform changes of coordinates for angular velocities
+The following step is to perform changes of coordinates for angular velocities.
