--- a/_posts/2020-06-14-lesson1.md
+++ b/_posts/2020-06-14-lesson1.md
@@ -39,14 +39,14 @@ The coordinates that we usually use are the representation of physical points by
 
 Given a coordinate frame 𝚿<sub>i</sub> = (o<sub>i</sub>, ̂x<sub>i</sub>, ŷ<sub>i</sub>, ̂z<sub>i</sub>), and a physical point p, we can map the physical point as:
 
-Coordinate map: 𝜓<sub>i</sub>: 𝜀(3) → ℝ<sup>3</sup>;<br>
-Use of the map: p → (<(p-o<sub>i</sub>),x̂<sub>i</sub>>, 
-                     <(p-o<sub>i</sub>),ŷ<sub>i</sub>>, 
-                     <(p-o<sub>i</sub>),ẑ<sub>i</sub>>)
+**Coordinate map**: 𝜓<sub>i</sub>: 𝜀(3) → ℝ<sup>3</sup>;<br>
+**Mapping of a point into a coordinate frame:**
+
+| p → (<(p-o<sub>i</sub>),x̂<sub>i</sub>>, <(p-o<sub>i</sub>),ŷ<sub>i</sub>>, <(p-o<sub>i</sub>),ẑ<sub>i</sub>>)
 
 In other words, 𝜓<sub>i</sub> is a map from the Euclidean Space into the 3 dimensional real number space. It takes p and it substracts the origin of the coordinate frame *o<sub>i</sub>)*, and then uses the result (which pertains to 𝜀(3)) to perform the inner product whith each unitary vector of the coordinate frame. After this operation it obtains a 3 dimensional representation of *p*. 
 
-It is possible to change between coordinate systems. To do this you first have to take inverse mapping from the current coordinate system and then apply the mapping to the desired coordinate system.
+It is possible to **change between coordinate systems**. To do this you first have to take inverse mapping from the current coordinate system and then apply the mapping to the desired coordinate system.
 
 In other terms: p<sup>2</sup> = (𝜓<sub>2</sub> *o* 𝜓<sub>1</sub><sup>-1</sup>)(p<sup>1</sup>)<br>
 Which maps: p<sup>1</sup> → p → p<sup>2</sup>
@@ -95,7 +95,7 @@ x =
 </td>
 </table>
 
-The vector product ,which is a map of 2 elements of a vector space to the same vector space ^: 𝜀<sub>\*</sub>(3) x 𝜀<sub>\*</sub>(3) → 𝜀<sub>\*</sub>(3). It can be defined in terms of the tilde operator:
+*The vector product*, which is a map of 2 elements of a vector space to the same vector space ^: 𝜀<sub>\*</sub>(3) x 𝜀<sub>\*</sub>(3) → 𝜀<sub>\*</sub>(3). It can be defined in terms of the tilde operator:
 
 | x ^ y = ̃x y
 
