--- a/_posts/2020-06-19-lesson2.md
+++ b/_posts/2020-06-19-lesson2.md
@@ -34,9 +34,249 @@ It is read as: Angular velocity of 𝚿<sub style="color:blue">a</sub> with resp
 
 Following this notation, we can again define the angular velocity *w̃*, now for the 2 definitions of *w̃*:
 
-| *w̃* | dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> |  | Notation |
+| *w̃* | dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | Substituting in dp <sup>j</sup> | Notation |
 | :--: | :-------------------------: |  | :------: |
 | <i style="color:red">w̃</i> :=  R<sub style="color:blue">j</sub> <sup style="color:red">i</sup>dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> = R<sub style="color:red">i</sub> <sup style="color:blue">j</sup> <i style="color:red">w̃</i> | dp <sup style="color:blue">j</sup> = R<sub style="color:red">i</sub> <sup style="color:blue">j</sup>(<i style="color:red">w</i> ^ p <sup style="color:red">i</sup>) | <i style="color:red">w̃</i> <sub style="color:red">i</sub> <sup style="color:red">i</sup><sup>,</sup> <sup style="color:blue">j</sup> |
 | <i style="color:blue">w̃</i> := dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> R<sub style="color:blue">j</sub> <sup style="color:red">i</sup> | dR<sub style="color:red">i</sub> <sup style="color:blue">j</sup> = <i style="color:blue">w̃</i> R<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | dp <sup style="color:blue">j</sup> = <i style="color:blue">w</i> ^ (R<sub style="color:red">i</sub> <sup style="color:blue">j</sup> p <sup style="color:red">i</sup>) | <i style="color:blue">w̃</i> <sub style="color:red">i</sub> <sup style="color:blue">j</sup><sup>,</sup> <sup style="color:blue">j</sup> |
 
-The following step is to perform changes of coordinates for angular velocities.
+The following step is to perform **changes of coordinates for angular velocities**. It is important to remind that the change of coordinates of an element in the matrix form is:
+
+| *w̃*<sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup> = R<sub>j</sub> <sup>i</sup> *w̃*<sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup> R<sub>i</sub> <sup>j</sup>
+
+Because of the identity: R *w̃* R<sup>T</sup> = (Rw)~
+
+Then the change of coordinates in the vector form is:
+
+| w<sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup> = R<sub>j</sub> <sup>i</sup> w<sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup>
+
+## Twists
+Once the angular velocity is clear, now let's take a look to twists, which are the generalization of velocities for the rigid bodies. Geometrically twists (Lie algebra se(3)) are for the homogeneous matrices (Lie group SE(3)) the same as angular velocities (Lie algebra so(3)) are for rotation matrices (Lie group SO(3)). 
+
+
+
+So the same way we defined angular velocity, we can do the same for twists:
+
+| <i>T ̃ </i> | dH<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | Substituting in dP <sup>j</sup> | Notation |
+| :--: | :-------------------------: |  | :------: |
+| <i style="color:red">T ̃ </i><sub style="color:red">L</sub> :=  H<sub style="color:blue">j</sub> <sup style="color:red">i</sup>dH<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | dH<sub style="color:red">i</sub> <sup style="color:blue">j</sup> = H<sub style="color:red">i</sub> <sup style="color:blue">j</sup> <i style="color:red"><i>T ̃ </i></i> | dP <sup style="color:blue">j</sup> = H<sub style="color:red">i</sub> <sup style="color:blue">j</sup>(<i style="color:red"><i>T ̃ </i></i> P <sup style="color:red">i</sup>) | <i style="color:red"><i>T ̃ </i></i> <sub style="color:red">i</sub> <sup style="color:red">i</sup><sup>,</sup> <sup style="color:blue">j</sup> |
+| <i style="color:blue">T ̃ </i><sub style="color:blue">R</sub> := dH<sub style="color:red">i</sub> <sup style="color:blue">j</sup> H<sub style="color:blue">j</sub> <sup style="color:red">i</sup> | dH<sub style="color:red">i</sub> <sup style="color:blue">j</sup> = <i style="color:blue"><i>T ̃ </i></i> H<sub style="color:red">i</sub> <sup style="color:blue">j</sup> | dP <sup style="color:blue">j</sup> = <i style="color:blue"><i>T ̃ </i></i> (H<sub style="color:red">i</sub> <sup style="color:blue">j</sup> P <sup style="color:red">i</sup>) | <i style="color:blue"><i>T ̃ </i></i> <sub style="color:red">i</sub> <sup style="color:blue">j</sup><sup>,</sup> <sup style="color:blue">j</sup> |
+
+Note that now, the physical point is representes as capital P, remember that when working with homogeneous matrices we added an extra row, if we take a look on what is currently happening we see that now the change of coordinates of a general motion is:
+
+<table class="inline">
+<td>
+P <sup>j</sup> = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>p<sup>j</sup> </td>
+          </tr>
+          <tr>
+               <td>1</td>
+          </tr>
+     </table>
+</td>
+<td>
+ = H<sub>i</sub> <sup>j</sup>
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>p<sup>i</sup> </td>
+          </tr>
+          <tr>
+               <td>1</td>
+          </tr>
+     </table>
+</td>
+</table>
+
+And then when taking the derivative dP <sup>j</sup> = dH<sub>i</sub> <sup>j</sup> P <sup>i</sup>  + H<sub>i</sub> <sup>j</sup> dP <sup>i</sup>, as P was defined to be fixed to the frame 𝚿<sub>i</sub>, dP <sup>i</sup> = 0, and by substituting dH<sub>i</sub> <sup>j</sup>:
+
+<table class="inline">
+<td>
+     <table class="matrix">
+          <tr>
+               <td>dp <sup>j</sup> </td>
+          </tr>
+          <tr>
+               <td>0</td>
+          </tr>
+     </table>
+</td>
+<td>
+ = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td><i>w̃</i> <sub>i</sub> <sup>j</sup><sup>,</sup> <sup>i</sup></td>
+               <td>v</td>
+          </tr>
+          <tr>
+               <td>0</td>
+               <td>0</td>
+          </tr>
+     </table>
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>p <sup>j</sup> </td>
+          </tr>
+          <tr>
+               <td>1</td>
+          </tr>
+     </table>
+</td>
+</table>
+
+Then we see that the derivative can also be expressed in terms of the vector product: dp <sup>j</sup> = w ^ p <sup>j</sup> + v ; And also the same could be done for <i>T ̃ </i><sub>L</sub>.
+
+What is v then? It is not the linear velocity that we usually study in physics?
+
+The answer is NO, v represents a velocity but it is not the one that is commonly known as the linear velocity. This v (which is represented in 𝚿<sub>j</sub>) represents the velocity of the object fixed to the frame 𝚿<sub>i</sub>, if this object was extended enough to go through the origin of 𝚿<sub>j</sub> and we meassured the velocity there in that instant of time. This interpretation is really useful because given only the 6 numbers of T then we have all of the information about the motion of the object. Using the other interpretation of v (the one that is commonly known) if we are given v as the derivative of the distance from the reference frame to the body frame 'dr', then we know nothing of this motion without knowing r. This both velocities v are only the same in the case of 𝚿<sub>i</sub> and 𝚿<sub>j</sub> being the same coordinate frame.
+
+## Screws
+**Mozzi's theorem (1763)**
+> Any (instantaneous) rigid body motion can be expressed as a rotation around an axis and a translation along the same axis.
+> Any 2D motion is a pure rotation, possibly around an axis at infinity. 
+
+Mozzi's theorem gives an intuition of what a twist is:
+
+<table class="inline">
+<td>
+T = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>w</td>
+          </tr>
+          <tr>
+               <td>v</td>
+          </tr>
+     </table>
+</td>
+<td>
+ = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>w</td>
+          </tr>
+          <tr>
+               <td>r ^ w</td>
+          </tr>
+     </table>
+</td>
+<td>
+ + λ
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>0</td>
+          </tr>
+          <tr>
+               <td>w</td>
+          </tr>
+     </table>
+</td>
+</table>
+
+Where the first element [w; r ^ w]<sup>T</sup> defines the rotation, w would be the rotation axis, r the point that toghether with the origin of the reference frame draws an orthogonal line to the axis of rotation. r ^ w is the moment of the line. The translation is represented by  [0; w]<sup>T</sup> and λ is the pitch of the screw, from r to the object.
+
+Given a twist we can express the motion as it's just have been shown. Now, how do we get these values λ and r from the twist? We can obtain them like:
+
+<table class="inline">
+<td>
+r = 
+</td>
+<td>
+<div class="n">w ^ v</div><div class="d">||w||<sup>2</sup></div>
+</td>
+<td>
+, 
+</td>
+<td>
+λ = 
+</td>
+<td>
+<div class="n">w<sup>T</sup>v</div><div class="d">||w||<sup>2</sup></div>
+</td>
+</table>
+
+Now that we know more about twists, let's see how we can perform **changes of coordinates for twists**. The way to proceed is similar to the one in angular velocities. From the definition of a twist in the tilde form <i>T ̃ </i><sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup> :=  H<sub>j</sub> <sup>i</sup>dH<sub>i</sub> <sup>j</sup> and <i>T ̃ </i><sub>i</sub> <sup>j</sup><sup>,</sup> <sup>j</sup> :=  dH<sub>i</sub> <sup>j</sup> H<sub>j</sub> <sup>i</sup>, we can obtain:
+
+| <i>T ̃ </i><sub>i</sub> <sup>j</sup><sup>,</sup> <sup>j</sup> =  H<sub>i</sub> <sup>j</sup> <i>T ̃ </i><sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup> H<sub>j</sub> <sup>i</sup>
+
+By working a bit in this expression we can eventually obtain the expression for the vector form:
+
+<table class="inline">
+<td>
+T<sub>i</sub> <sup>j</sup><sup>,</sup> <sup>j</sup> = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>w<sub>i</sub> <sup>j</sup><sup>,</sup> <sup>j</sup></td>
+          </tr>
+          <tr>
+               <td>v<sub>i</sub> <sup>j</sup><sup>,</sup> <sup>j</sup></td>
+          </tr>
+     </table>
+</td>
+<td>
+ = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>R<sub>i</sub> <sup>j</sup></td>
+               <td>0</td>
+          </tr>
+          <tr>
+               <td> ̃p<sub>i</sub> <sup>j</sup>R<sub>i</sub> <sup>j</sup></td>
+               <td>  R<sub>i</sub> <sup>j</sup></td>
+          </tr>
+     </table>
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>w<sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup></td>
+          </tr>
+          <tr>
+               <td>v<sub>i</sub> <sup>i</sup><sup>,</sup> <sup>j</sup></td>
+          </tr>
+     </table>
+</td>
+</table>
+
+Where we can define the matrix:
+
+<table class="inline">
+<td>
+Ad<sub>H<sub>i</sub> <sup>j</sup></sub> = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>R<sub>i</sub> <sup>j</sup></td>
+               <td>0</td>
+          </tr>
+          <tr>
+               <td> ̃p<sub>i</sub> <sup>j</sup>R<sub>i</sub> <sup>j</sup></td>
+               <td>  R<sub>i</sub> <sup>j</sup></td>
+          </tr>
+     </table>
+</td>
+</table>
+
+Note that p<sub>i</sub> <sup>j</sup> is a 3x3 matrix formed by the tilde representation of the vector telling the distance between the origin of frame i and frame j. Ad<sub>H<sub>i</sub> <sup>j</sup></sub> is a 6x6 matrix which has a Lie group interpretation, and it can be though as a linear map from the se(3) algebra to the se(3) algebra:
+
+| T<sub>k</sub> <sup>j</sup><sup>,</sup> <sup>l</sup> = Ad<sub>H<sub>i</sub> <sup>j</sup></sub> T<sub>k</sub> <sup>i</sup><sup>,</sup> <sup>l</sup>
+
