--- a/_posts/2020-06-19-lesson2.md
+++ b/_posts/2020-06-19-lesson2.md
@@ -280,3 +280,115 @@ Note that p<sub>i</sub> <sup>j</sup> is a 3x3 matrix formed by the tilde represe
 
 | T<sub>k</sub> <sup>j</sup><sup>,</sup> <sup>l</sup> = Ad<sub>H<sub>i</sub> <sup>j</sup></sub> T<sub>k</sub> <sup>i</sup><sup>,</sup> <sup>l</sup>
 
+A big advantage that gives to work with twists is that given a rigid body it doesn't matter where you put the coordinate frame as long as this is fixed to the body, the Twist will be the same for any frame. This can be easily be proven. 
+
+If you have 2 rigid bodies and 2 coordinate frames for each body, 𝚿<sub>1</sub> and 𝚿<sub>2</sub> for the first body and 𝚿<sub>3</sub> and 𝚿<sub>4</sub> for the second. Then you can define the twist of the second body with respect to the first one in terms of 𝚿<sub>1</sub> as: <i>T ̃ </i><sub>3</sub> <sup>1</sup><sup>,</sup> <sup>1</sup> =  dH<sub>3</sub> <sup>1</sup> H<sub>1</sub> <sup>3</sup> or as <i>T ̃ </i><sub>4</sub> <sup>1</sup><sup>,</sup> <sup>1</sup> =  dH<sub>4</sub> <sup>1</sup> H<sub>1</sub> <sup>4</sup>. Because both frames are fixed to the second body. Then if we apply the chain rule to any of the expressions to arrive to the other we see: 
+
+<i>T ̃ </i><sub>3</sub> <sup>1</sup><sup>,</sup> <sup>1</sup> =  dH<sub>3</sub> <sup>1</sup> H<sub>1</sub> <sup>3</sup> = dH<sub>4</sub> <sup>1</sup> H<sub>3</sub> <sup>4</sup> H<sub>4</sub> <sup>3</sup> H<sub>1</sub> <sup>4</sup> + dH<sub>4</sub> <sup>1</sup> H<sub>3</sub> <sup>4</sup> H<sub>4</sub> <sup>3</sup> H<sub>1</sub> <sup>4</sup> =  dH<sub>4</sub> <sup>1</sup> H<sub>1</sub> <sup>4</sup> = <i>T ̃ </i><sub>4</sub> <sup>1</sup><sup>,</sup> <sup>1</sup>
+
+This way it is demonstrated that **it is possible to talk about twists of bodies**, as long as the coordinate frames are fixed to them. 
+
+## Wrenches
+Wrenches are the generalization of forces for rigid bodies, so they are the dual space se<sup>*</sup>(3) for velocities. They act as a linear map from twists to power. We can define wrenches like:
+
+| W = (τ f)
+
+Where τ represents torque and f linear force. And in tilde form as:
+
+<table class="inline">
+<td>
+ ̃W = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td> ̃f</td>
+               <td>m<sup>T</sup></td>
+          </tr>
+          <tr>
+               <td>0</td>
+               <td>0</td>
+          </tr>
+     </table>
+</td>
+</table>
+
+The way that it is often used is to map velocities to power as:
+
+| Power = WT = mw + fv
+
+Poinsot's theorem 
+> Any system of forces can be expressed as a pure linear force along a line plus a pure moment   
+around it.
+
+It is the dual theorem for Mozzi's theorem: 
+
+<table class="inline">
+<td>
+W = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>τ</td>
+          </tr>
+          <tr>
+               <td>F</td>
+          </tr>
+     </table>
+</td>
+<td>
+ = 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>r ^ F</td>
+          </tr>
+          <tr>
+               <td>F</td>
+          </tr>
+     </table>
+</td>
+<td>
+ + λ
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>F</td>
+          </tr>
+          <tr>
+               <td>0</td>
+          </tr>
+     </table>
+</td>
+</table>
+
+From the expression [r ^ F; F] represents the force and [F; 0] the moment. Note that the force is a line-bounded element and the torque is not. Instantaneously, if we apply a torque to a rigid body it doesn't matter where we a apply it, but for forces they only have this freedom inside a defined line.
+
+Now let's see how we can perform changes of coordinates for wrenches, we will use the dual adjoint matrix: 
+
+| (W<sup>i</sup>)<sup>T</sup> = Ad<sup>T</sup><sub>H<sub>i</sub> <sup>j</sup></sub> (W<sup>j</sup>)<sup>T</sup>
+
+where the adjoint matrix is:
+
+<table class="inline">
+<td>
+Ad<sup>T</sup><sub>H<sub>i</sub> <sup>j</sup></sub> := 
+</td>
+<td>
+     <table class="matrix">
+          <tr>
+               <td>R<sub>j</sub> <sup>i</sup></td>
+               <td>-R<sub>j</sub> <sup>i</sup>  ̃p<sub>i</sub> <sup>j</sup></td>
+          </tr>
+          <tr>
+               <td>0</td>
+               <td>R<sub>j</sub> <sup>i</sup></td>
+          </tr>
+     </table>
+</td>
+</table>
+
+Important remark: Both the wrenches and twists must be expressed in the same coordinate frame to be able to perform the map into power.
