--- a/_posts/2020-06-21-lesson3.md
+++ b/_posts/2020-06-21-lesson3.md
@@ -204,7 +204,7 @@ It is possible to describe the movement of a robot by using homogeneous matrices
 
 | H<sub>i</sub><sup>i -1</sup>(q<sub>i</sub>) = e<sup><i> ̃ ̂T </i><sub>i</sub><sup>(i-1)</sup><sup>,</sup> <sup>(i-1)</sup>q<sub>i</sub></sup> H<sub>i</sub><sup>i -1</sup>(0)  
 
-Note the twist is in tilde form and is a unitary twist, it is also a constant twist so q<sub>i</sub> determines the configuration. H(0) is the initial configuration of the robot. With some calculations (<span style="color:red">To be extended</span>) we arrive to:
+Note the twist is in tilde form and is a unitary twist, it is also a constant twist so q<sub>i</sub> determines the configuration, note that <mark style="background-color: #ffffcc">the set of configutations q form a vector space of their own named Q</mark>. H(0) is the initial configuration of the robot. With some calculations (<span style="color:red">To be extended</span>) we arrive to:
 
 **Brockett's exponential formula (Sir.Kin)**
 
@@ -227,6 +227,6 @@ The geometric Jacobian is a group of unitary twists:
 
 | J(q) = (T<sub>1</sub> T<sub>2</sub> ... T<sub>n</sub>)
 
-Where dq is the velocity at the joints which was obtained from the previous expression of kinematic pairs as the factor that multiplies the unitary twists. The geometric Jacobian is very useful as it let's us map from the velocities at the joints to twists at the end effector **J(q): dq → T<sub>n</sub><sup>0</sup><sup>,</sup> <sup>0</sup>**; the inverse map (in this case as it is skew symmetric we can compute it as the traspose) will let us go from wrenches at the end effector to torques at the joints **J<sup>T</sup>(q): (W<sup>n</sup>)<sup>T</sup> → τ**. This will be very useful for control as we will be able to get the necessary torque to get a certain force at the end-effector. 
+Where dq is the velocity at the joints which was obtained from the previous expression of kinematic pairs as the factor that multiplies the unitary twists. The geometric Jacobian is very useful as it let's us map from the velocities at the joints to twists at the end effector **J(q): TQ → se(3); dq → T<sub>n</sub><sup>0</sup><sup>,</sup> <sup>0</sup>**; the inverse map (in this case as it is skew symmetric we can compute it as the traspose) will let us go from wrenches at the end effector to torques at the joints **J<sup>T</sup>(q): se<sup>*</sup>(3) → TQ<sup>*</sup>; (W<sup>n</sup>)<sup>T</sup> → τ**. This will be very useful for control as we will be able to get the necessary torque to get a certain force at the end-effector. 
 
 An important remark is that <mark style="background-color: #ffffcc">the Geometric Jacobian is different from the analytic Jacobian</mark>, the Geometric Jacobian can be calculated by inspection. Both Jacobians give the kinematic information of bodies, but there is a difference, the output of the Geometric Jacobian is a twist, so it is not the derivative of anything, is a geometric information of the motion of the end-effector. The twist is a geometric 6-dimensional structure and the analytic Jacobian is a non-geometrical structure, indeed we can go from the geometric Jacobian to the analytical Jacobian, but not the other way around.
